Fix dead links to old Flycheck homepage
Thanks, @oaubert

--- a/_posts/2014-10-26-flycheck-0.21.md
+++ b/_posts/2014-10-26-flycheck-0.21.md
@@ -10,5 +10,5 @@ and the [changelog][], and update Flycheck with `M-x list-packages RET U x`.
 
 Enjoy the new release, and many many thanks for your support!
 
-[release annoucement]: http://flycheck.readthedocs.org/en/latest/guide/releases/flycheck-0.21.html
-[changelog]: http://flycheck.readthedocs.org/en/latest/guide/releases/index.html#oct-26-2014
+[release annoucement]: http://www.flycheck.org/2014/08/12/flycheck-0.21.html
+[changelog]: http://www.flycheck.org/changes.html#oct-26-2014
